# macopy

./: .gitignore  .taurirc  CLAUDE.md  ClipboardWatcher.swift  README.md  knip.json  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
.claude/: settings.json
.github/: FUNDING.yml
lp/: package-lock.json  package.json
lp/src/app/: layout.tsx  page.module.css  page.tsx
main/: main.ts  preload.js
renderer/: App.module.css  App.tsx  index.html  vite-env.d.ts
renderer/api/: tauri.ts
renderer/types/: macopy.d.ts
scripts/: copy-preload.js  strip-electron-bloat.sh
shared/: constants.ts  types.ts
src/: Cargo.toml  Info.plist  tauri.conf.json
src/capabilities/: default.json
src/src/: lib.rs
