[package]
name = "macopy"
version = "0.3.0"
description = "A lightweight clipboard history manager for macOS"
authors = ["piro <piro.haniwa@gmail.com>"]
license = "ISC"
repository = "https://github.com/piro0919/macopy"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
base64 = "0.22.1"
image = "0.25.10"
png = "0.18.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
